# sketchbook

./: .gitignore  LICENSE  Makefile  flake.nix  hs-openSCAD.cabal  polydraw.cabal  sketchbook.cabal
depends/: scad2png
resources/: grass-4-blades.stl
src/: Graphics  Land.hs  Land.lhs  Main.hs  Main.lhs  Tree.hs  Tree.lhs
src/Graphics/: OpenSCAD.hs
