cabal-version:   3.0
name:            example
version:         0.1.0.0
license:         NONE
author:          D. Sunshine
maintainer:      david@sunshines.org
build-type:      Simple

common warnings
    ghc-options: -Wall

executable example
    import:             warnings
    main-is:            Main.lhs
    build-depends:      base, markdown-unlit
    ghc-options:        -pgmL markdown-unlit
    build-tool-depends: markdown-unlit:markdown-unlit
    hs-source-dirs:     src
    other-modules:      OpenSCAD
    default-language:   Haskell2010
