cabal-version:   3.0
name:            polydraw
version:         0.1.0.0
license:         NONE
author:          D. Sunshine
maintainer:      david@sunshines.org
build-type:      Simple

common warnings
    ghc-options: -Wall

executable polydraw
    import:             warnings
    main-is:            Main.hs
    build-depends:      base, containers, filepath, colour, hsnoise
    hs-source-dirs:     src
    other-modules:      Graphics.OpenSCAD, Tree, Land
    default-extensions: FlexibleContexts
    default-language:   Haskell2010
